# service-assistant

./: .tool-versions  AGENTS.md  DEMO-ARCHITECTURE.md  PRESENTATION.md  README.md
.claude/: CLAUDE.md  settings.json
.claude/rules/: api-design.md  testing.md
.codex/: hooks.json
.codex/hooks/: format.sh
.github/workflows/: deploy-production.yml  deploy-staging.yml  main.yml
attachments/: readme.md
client/: .env.example  .gitignore  .prettierrc  Makefile  README.md  app.json  eas.json  jest.config.js  package-lock.json  package.json
client/__tests__/: api-config.test.ts  auth-errors.test.ts  chat-layouts.test.tsx  chat-messages.test.tsx  chat-stream.test.ts  components-ui.test.tsx  control-panel.test.tsx  eas-config.test.ts  example.test.ts  screens.test.tsx  source-panel.test.tsx  use-app-settings.test.ts  use-assistant-audio.test.ts  use-chat-api.test.ts  use-microphone.test.ts  use-source-panel-files.test.ts  use-vehicle-metadata.test.ts  (+2 more)
server/: .dockerignore  .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  fly.toml  pyproject.toml
server/.claude/: settings.local.json
server/alembic/: env.py
server/alembic/versions/: 20260417_0855_5b668b89ccdc_create_attachment_chunks_table.py  20260506_0032_63476f0c9e4e_change_embedding_vector_size.py  20260506_1758_a226463fba28_add_original_file_name.py  20260515_0000_f4c9b2e8d1a3_restructure_tables_for_rest_api.py  20260522_1323_93c770e5994a_remove_timestamps_from_link_tables.py  20260525_1404_dc64913fec70_remove_image_url_from_messages.py  20260531_1733_4a82b8e216a4_timestamps_update.py  20260606_1224_remove_server_default_from_timestamps.py  20260615_2006_3b905efe4309_update_message_sender_from_system_to_.py
server/app/: config.py  database.py  main.py  models.py
server/app/models/: __init__.py  associations.py  attachment.py  brand.py  chat_thread.py  chunk.py  device.py  device_type.py  message.py
server/app/routers/: add_doc.py  admin.py  ai.py  attachments.py  brands.py  chunks.py  device_types.py  devices.py  example.py  get_doc.py  hello.py  images.py  messages.py  rag.py  threads.py
server/app/schemas/: __init__.py  attachment.py  brand.py  chat_thread.py  chunk.py  device.py  device_type.py  message.py
server/app/services/: chunking.py  embedding.py  ext_img.py  extract_images.py  ingest.py  llm.py  retrieval.py  stt.py  tts.py
server/app/templates/admin/: base.html  brand_edit.html  brands.html  chunks.html  device_edit.html  device_type_edit.html  device_types.html  devices.html  document_detail.html  documents.html  login.html  thread_detail.html  threads.html
server/tests/: conftest.py  test_example_add.py  test_hello.py  test_main.py
server/tests/routers/: conftest.py  factories.py  test_attachments.py  test_auth.py  test_brands.py  test_chunks.py  test_device_types.py  test_devices.py  test_get_doc.py  test_hello.py  test_images.py  test_messages.py  test_rag.py  test_threads.py
server/tests/services/: conftest.py  test_embedding.py  test_extract_images.py  test_ingest.py  test_llm.py  test_retrieval.py  test_tts.py
tools/: generate_project_documentation_pdf.py
(+64 files in other folders)
