[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateusz Mańczak",email = "mateuszmanczak@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"

dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "openai (>=2.32.0,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "pymupdf4llm (>=1.27.2.3,<2.0.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "websockets (>=13.0,<15.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
]

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "pyright (>=1.1.410,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:builtin type swigvarlink:DeprecationWarning",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
